<resources>
    <string name="app_name" translatable="false">مساعدك الدراسي</string>
    <string name="welcome_message">مرحبا بك هنا \nاهلا بعودتك مرة اخري</string>
    <string name="help_message">نحن هنا لمساعدتك في الحصول علي جميع مقرراتك الدراسية وجميع محاضرتك بمجرد تسجل دخولك</string>
    <string name="login">تسجيل دخول</string>
    <string name="login_Message">تسجيل الدخول\n الي حسابك</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="username">الرقم القومي</string>
    <string name="userId">ادخل الرقم القومي *</string>
    <string name="help_student_afferis">لو لديك اي مشاكل في تسجيل الدخول تواصل مع شئون الطلاب</string>
    <string name="classroom">االفصول الدراسية</string>
    <string name="chats">الدردشات</string>
    <string name="home_page">الصفحة الرئيسية</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="name">احمد ابراهيم محمود</string>
    <string name="noti">الاشعارات</string>
    <string name="quiz">الكويزات</string>
    <string name="posts">المنشورات التي تم نشراها</string>
    <string name="study_table">الجدول الدراسي</string>
    <string name="tom_lecture">محاضرات الغد</string>
    <string name="nuo">10</string>
    <string name="lecture_today">محاضرات اليوم</string>
    <string name="open">فتح</string>
    <string name="close">قفل</string>
    <string name="btn_submit">ارسال الاجابة وعرض النتيجة</string>
    <string name="question">ازاي اقدر ادفع المصاريف وفين ادفعها وهل لازم يكون موجود فيزا</string>
    <string name="name_person">احمد ابراهيم محمود</string>
    <string name="time">منذ 15 س</string>
    <string name="message_classroom">رساله من الطالب الي الدكور في الكلاس روم</string>
    <string name="_2_28_am">2:28 AM</string>
    <string name="name_of_course">Formal Language</string>
    <string name="last_message">بكرا فية امتحان ان شاء الله</string>
    <string name="time_message">امس</string>
    <string name="hint_message">اكتب رسالتك هنا</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="department">القسم : الرياضيات وعلوم الحاسب</string>
    <string name="grade">الفرقة: الرابعة</string>
    <string name="state">الحالة الدراسية : مستجد</string>
    <string name="email">ai1453@fayoum.edu.eg : الميل الالكتروني</string>
    <string name="hint_post">ما هو سؤالك ؟</string>
    <string name="post">نشر</string>
    <string name="delete">مسح</string>
    <string name="update">تعديل</string>
    <string name="add_image">اضافة صورة</string>
    <string name="good_morning">صباح الخير</string>
    <string name="good_evening">مساء الخير</string>
    <string name="last">كيف حالك يا صديقي</string>
    <string name="ysterday">امس</string>
    <string name="number">999+</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="noti_item">تم اضافة منشور جديد في شئون الطلاب انقر للاطلاع</string>
    <string name="from">شئون الطلاب</string>
    <string name="notify">الاشعارات</string>
    <string name="comments">التعليقات</string>
    <string name="post_comment">نعم سوف نقوم بذالك</string>
    <string name="time_comment">8 : 46: 50 Am</string>
    <string name="hint_message_comment">اضف تعليقك</string>
    <string name="add_comment">اضافة تعليق</string>
    <string name="rect">تفاعل</string>
    <string name="chating_with">مراسلة</string>
    <string name="todo">TODO</string>
    <string name="search_box">ابحث هنا</string>
    <string name="auto">مباشر</string>
    <string name="add_data">اضافة بيانات</string>
    <string name="email_hint">الاميل *</string>
    <string name="depart_code">كود القسم</string>
    <string name="course_name">اسم الكورس هنا</string>
    <string name="course_code">كود الكورس</string>
    <string name="add_data_quiz">اضافة بيانات الكويز</string>
    <string name="replay">رد</string>
    <string name="phone_number">ادخل رقم الهاتف *</string>
    <string name="enable_email">تمكين</string>
    <string name="emil">ahmed.alharith01@gmail.com</string>
    <string name="date">16/02/2023</string>
    <string name="add_date">تاريخ الاضافة</string>
    <string name="quistion">{w| w contains an equal number of 0s and 1s}</string>
    <string name="_15_00">الوقت المتبقي حتي انتهاء الوقت 15:00 د</string>
    <string name="read_more">قراءة المزيد …</string>
    <string name="settings">الاعددات</string>
    <string name="collage">الكلية : العلوم</string>
    <string name="about_developer">تم تطوير التطبيق بواسطة فريق من كلية العلوم قسم علوم الحاسب جامعة الفيوم يسرنا استخدامكم للتطبيق يمكن التواصل معنا ان كان هناك اي مشكلة في التطبيق او تحسين تجربة المسخدام من خلال الروابط ب الاسفل</string>
    <string name="first_name">الاسم الاول *</string>
    <string name="last_name">الاسم الاخير *</string>
    <string name="password">كلمة المرور</string>
    <string name="nationalityId">الرقم القومي : 9991283920192930</string>
    <string name="responsibleLevel">مسئول الفرقة : الاولي</string>
    <string name="msg_token_fmt" formatted="true">23ewdgsydgadfayufdauysdfastud</string>
    <string name="default_notification_channel_id">message firebase</string>
    <string name="_11_34_am">11:34 am</string>
    <string name="_0_08">0.08</string>
    <string name="student_affairs">Student Affairs</string>
    <string name="title">العنوان</string>
    <string name="a">(A)</string>
    <string name="b">(B)</string>
    <string name="c">(C)</string>
    <string name="d">(D)</string>
    <string name="correct_ansore">الاجابة الصحيحة</string>
    <string name="leave">خروخ</string>
    <string name="join">دخول</string>

</resources>