<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardElevation="8dp"
    android:layout_marginStart="2dp"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="2dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="16dp"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient">

        <TextView
            android:id="@+id/respnsiple_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/responsibleLevel"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:drawablePadding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAdmin"
            app:layout_constraintVertical_bias="0.0"
            app:drawableRightCompat="@drawable/ic_level" />

        <TextView
            android:id="@+id/data_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/data_add3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/data_add3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_date"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/data_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/data_add"
            app:drawableRightCompat="@drawable/ic__update" />

        <TextView
            android:id="@+id/nameAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/data_add" />

        <TextView
            android:id="@+id/nationalIdAdmin"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/nationalityId"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:drawablePadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameAdmin"
            app:drawableRightCompat="@drawable/ic_id_24" />

        <TextView
            android:id="@+id/emailAdmin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center|right"
            android:minHeight="48dp"
            android:text="@string/emil"
            android:drawablePadding="8dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nationalIdAdmin"
            app:drawableRightCompat="@drawable/ic_email"
            app:drawableTint="@color/white" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>