<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:layoutDirection="rtl"
    android:paddingBottom="4dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/background_raduis_16">

    <TextView
        android:id="@+id/question_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textAlignment="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_post" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#2B2B2B"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_post">

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:background="#2B2B2B"
            android:contentDescription="@string/todo"
            android:visibility="visible"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/women1" />

    </androidx.cardview.widget.CardView>
<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height=".5dp"-->
<!--        android:background="@color/white"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/linearLayout" />-->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counterReact">


        <TextView
            android:id="@+id/view_post"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_raduis_16"
            android:drawablePadding="8dp"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/rect"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:drawableRightCompat="@drawable/ic_rect_eye" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_raduis_16"
            android:drawablePadding="8dp"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/add_comment"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:drawableRightCompat="@drawable/ic_comment" />

        <TextView
            android:id="@+id/view_post2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_raduis_16"
            android:drawablePadding="8dp"
            android:gravity="start|center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/chating_with"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:drawableRightCompat="@drawable/ic_chat" />
    </LinearLayout>

    <ImageView
        android:id="@+id/manage_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/time_post"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/avatar" />

    <TextView
        android:id="@+id/nameOfPostPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/name_person"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:padding="1dp"
        android:textSize="11sp"
        android:layout_margin="1dp"
        android:textColor="#CCCCCC"
        app:layout_constraintEnd_toEndOf="@+id/nameOfPostPerson"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameOfPostPerson"
        app:layout_constraintTop_toBottomOf="@+id/nameOfPostPerson" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:text="الفرقة الرابعة "
        android:textColor="#0160FF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/nameOfPostPerson"
        app:layout_constraintStart_toEndOf="@+id/nameOfPostPerson"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/counterReact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="4dp"
        android:paddingEnd="16dp"
        android:text="100 مشاهده"
        android:textColor="#CCCfff"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/cardImage" />

    <TextView
        android:id="@+id/numberOfComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:paddingEnd="8dp"
        android:text=" 20 تعليق"
        android:textColor="#cccfff"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardImage"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>